# college-agent

./: .gitignore  CLAUDE.md  README.md  graph.py  langsmith_eval.py  main.py  pyproject.toml
booking/: bookingAPi.py  models.py
entity/: studentForm.py  venueEntity.py
graph/: __init__.py  mainGraph.py  ragGraph.py
graph/main/: graph_config.py  main_graph.py
graph/rag/: rag_config.py  rag_graph.py
graph/rag/node/: fallback.py  generate.py  grade_answer.py  grade_context.py  retrieve.py  rewrite.py
graph/rag/rag_previous_work/: rag_chain.py  rag_index_mivus.py  rag_loadDocuments.py
graph/rag/rag_previous_work/mall/: generate_ecommerce_data.py  load_ecommerce_to_milvus.py
graph/rag/state/: rag_agent_state.py
graph/sql/: sqlGraph.py
graph/sql/sql_previous_work/api/: bookingAPi.py  venueApi.py
graph/sql/sql_previous_work/crud/: message.py
graph/sql/sql_previous_work/entity/: bookingEntity.py  studentForm.py
graph/sql/sql_previous_work/tools/: tool1.py
graph/sql_graph/: sqlGraph.py
graph/sql_graph/state/: sqlAgentState.py
rag/: rag_chain.py  rag_index_mivus.py  rag_loadDocuments.py
sql/api/: bookingAPi.py  venueApi.py
sql/booking/: models.py  venueApi.py
sql/crud/: message.py
sql/entity/: MessageEntity.py  bookingEntity.py  studentForm.py
sql/table/: models.py
sql/tools/: tool1.py
