[project]
name = "langchain-ai-learning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.7.37",
    "notebook>=7.5.5",
    "openai>=2.32.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
